winchek und bugfix GameController